Make every jetty EndpointConfig implementation a wrapper
Signed-off-by: Lachlan Roberts <lachlan@webtide.com>